--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     </style>
   </head>
   <body>
+    <script src="https://unpkg.com/uplot@1.6.15/dist/uPlot.esm.js">
     <script type="module" src="index.js">
     </script>
   </body>
